Fix awkward display case wrapping

--- a/stylesheets/profile-package/badges.css
+++ b/stylesheets/profile-package/badges.css
@@ -203,7 +203,7 @@
     border: 1px solid #999;
 }
 
-@media all and (max-width: 1180px) {
+@media all and (max-width: 1200px) {
     .achievement-badge .selected-indicator {
         border-top: none;
         border-left: 7px solid transparent;
@@ -233,7 +233,7 @@
     }
 }
 
-@media all and (max-width: 1075px) {
+@media all and (max-width: 1100px) {
     .achievement-badge.compact .achievement-title {
         font-size: 9px;
         white-space: nowrap; /* force to a single line */
@@ -254,7 +254,7 @@
         padding: 24px 10px;
     }
 }
-@media all and (max-width: 768px) {
+@media all and (max-width: 1050px) {
     .achievement-badge.compact {
         width: 58px;
         height: 72px;
